--- a/Ionic_App/bower.json
+++ b/Ionic_App/bower.json
@@ -5,6 +5,8 @@
     "ionic": "driftyco/ionic-bower#1.0.0-rc.2"
   },
   "dependencies": {
-    "angular-mocks": "~1.3.15"
+    "angular-mocks": "~1.3.15",
+    "ngCordova": "~0.1.19-alpha",
+    "fingerprintjs2": "~0.7.1"
   }
 }
